[package]
name = "grpc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[examples]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "examples/server.rs"


[dependencies]
proto = {path = "../proto"}
tonic = "0.6"
futures-core = "0.3"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
anyhow = "1"
async-stream = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"