[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[examples]]
name = "server"
src = "server.rs"

[[examples]]
name = "client"
src = "client.rs"

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.9.0" # 处理 protobuf 的代码
tracing = "0.1" # 日志处理
thiserror = "1.0.30"
dashmap = "5.0.0" 
http = "0.2.5"
anyhow = "1" # 错误处理
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }


[dev-dependencies]
async-prost = "0.3.0" # 支持把 protobuf 封装成 TCP frame
tracing-subscriber = "0.3.5" # 日志处理

[build-dependencies]
prost-build = "0.9.0" # 编译 protobuf
