[package]
name = "prost_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
bytes = "1" 
serde = {version = "1", features = ["derive"]}
serde_json = "1"


[build-dependencies]
prost-build = "0.9.0"